--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "license": "ISC",
   "dependencies": {
     "electron": "^28.1.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
