chore: 更新项目配置文件和样式调整
- 添加 `project.private.config.json` 配置文件
- 调整 `app.wxss` 中的阴影样式
- 更新 `api.wxss` 和 `api.js` 中的类名和样式
- 优化 `project.config.json` 配置，移除冗余字段

--- a/miniprogram/project.config.json
+++ b/miniprogram/project.config.json
@@ -1,8 +1,5 @@
 {
   "description": "项目配置文件",
-  "packOptions": {
-    "ignore": []
-  },
   "setting": {
     "bundle": false,
     "userConfirmedBundleSwitch": false,
@@ -23,47 +20,30 @@
     "nodeModules": false,
     "enhance": true,
     "useMultiFrameRuntime": true,
-    "useApiHook": true,
-    "useApiHostProcess": true,
     "showShadowRootInWxmlPanel": true,
     "packNpmManually": false,
     "enableEngineNative": false,
     "packNpmRelationList": [],
     "minifyWXSS": true,
     "showES6CompileOption": false,
-    "minifyWXML": true
+    "minifyWXML": true,
+    "babelSetting": {
+      "ignore": [],
+      "disablePlugins": [],
+      "outputPath": ""
+    },
+    "ignoreUploadUnusedFiles": true
   },
   "compileType": "miniprogram",
+  "condition": {},
+  "editorSetting": {
+    "tabIndent": "insertSpaces",
+    "tabSize": 2
+  },
   "libVersion": "2.19.4",
-  "appid": "wx123456789",
-  "projectname": "AI日报",
-  "debugOptions": {
-    "hidedInDevtools": []
+  "packOptions": {
+    "ignore": [],
+    "include": []
   },
-  "scripts": {},
-  "staticServerOptions": {
-    "baseURL": "",
-    "servePath": ""
-  },
-  "isGameTourist": false,
-  "condition": {
-    "search": {
-      "list": []
-    },
-    "conversation": {
-      "list": []
-    },
-    "game": {
-      "list": []
-    },
-    "plugin": {
-      "list": []
-    },
-    "gamePlugin": {
-      "list": []
-    },
-    "miniprogram": {
-      "list": []
-    }
-  }
+  "appid": "wxda00a0f879fdc8c6"
 }
